# baileys-python

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture-design.md  changelog.md  compatibility-matrix.md  contributing.md  deferred-todos.md  examples.md  feature-status.md  inbound-processing-design.md  index.md  live-verification-design.md  migration-guide.md  node-reference-audit.md  postgres-adapter-design.md  public-api.md  publishing.md  quickstart.md  release-checklist.md  release-hardening-design.md  roadmap.md  storage-design.md
examples/: echo_bot.py  pairing_code_request.py  saved_auth_login.py
scripts/: app_state_key_probe.py  audit_node_public_api.py  capability_check.py  caveat_check.py  decrypt_capture_probe.py  generate_proto.py  generate_wabinary_tokens.py  generate_wam_constants.py  group_participating_probe.py  live_pair_probe.py  live_suite.py  live_websocket_probe.py  login_probe.py  media_retry_probe.py  message_content_probe.py  noise_handshake_probe.py  pairing_code_probe.py  persistent_login_probe.py  phase5_live_probe.py  phase5_mutation_probe.py  phase5_write_probe.py  phase7_catalog_cleanup.py  phase7_live_probe.py  phase7_remaining_probe.py  prekey_maintenance_probe.py  product_inbound_probe.py  product_pairing_code_probe.py  product_qr_pairing_probe.py  product_soak_probe.py  qr_ref_probe.py  reconnect_probe.py  registration_bootstrap_probe.py  release_gate.py  release_status.py  send_image_probe.py  send_media_probe.py  send_text_probe.py  signal_compat_check.py  signal_session_check.py  soak_suite.py  (+1 more)
src/baileys/: __init__.py  app_state.py  auth.py  auth_state.py  auth_store.py  business.py  chat_groups.py  client.py  communities.py  crypto.py  defaults.py  disconnect.py  errors.py  events.py  group_sender_probe.py  history.py  jid.py  logging_utils.py  media.py  message_decrypt.py  message_send.py  messages.py  mex.py  newsletter.py  noise.py  notifications.py  pairing_code.py  postgres_store.py  prekeys.py  privacy_tokens.py  query.py  receipts.py  retry.py  (+16 more)
tests/: test_app_state.py  test_artifacts_and_auth_state.py  test_chat_group_api.py  test_error_hierarchy.py  test_history.py  test_live_suite_script.py  test_logging_utils.py  test_messages.py  test_node_public_api_audit.py  test_offline_capabilities.py  test_outbound_api.py  test_phase7_surfaces.py  test_postgres_store.py  test_postgres_store_integration.py  test_protocol_foundation.py  test_public_api.py  test_receipts.py  test_release_status.py  test_replay_store.py  test_reporting_privacy_tokens.py  test_soak_suite_script.py  test_socket_foundation.py  test_sqlite_event_store.py  test_sqlite_store.py  test_store.py  test_wam.py
(+1 files in other folders)
