[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baileys-python"
version = "0.1.0a1"
description = "Async Python implementation of the WhatsApp Web protocol inspired by Baileys."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Baileys Python contributors" }]
keywords = ["whatsapp", "baileys", "websocket", "asyncio", "whatsapp-web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp",
    "cryptography",
    "protobuf",
    "qrcode[pil]",
    "signal-protocol",
    "websockets",
    "xeddsa",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]
docs = ["mkdocs-material"]
postgres = ["psycopg[binary,pool]>=3.2"]
proto = ["grpcio-tools"]

[project.urls]
Homepage = "https://github.com/sivajeetsabdakar/baileys-python"
Repository = "https://github.com/sivajeetsabdakar/baileys-python"
Issues = "https://github.com/sivajeetsabdakar/baileys-python/issues"
Documentation = "https://github.com/sivajeetsabdakar/baileys-python#readme"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require an external service",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baileys = ["generated/*.json", "generated/*.proto", "py.typed"]
